fix: align warning details

--- a/assets/css/bpmn-js-bpmnlint.css
+++ b/assets/css/bpmn-js-bpmnlint.css
@@ -99,8 +99,12 @@
   white-space: nowrap;
 }
 
-.bjsl-issues li:not(:first-child) {
-  margin-top: 7px;
+.bjsl-issues .icon {
+  display: flex;
+}
+
+.bjsl-issues li + li {
+  margin-top: .5rem;
 }
 
 .bjsl-issues .error svg {
